--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-version '1.0.0'
+version '1.0.1'
 
 buildscript {
     ext.kotlin_version = '1.4.10'
@@ -25,7 +25,7 @@ jar {
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
-    exclude 'META-INF/versions/9/*.class','META-INF/*.txt'
+    exclude 'META-INF/versions/9/*.class','META-INF/*.txt','META-INF/*/*'
 }
 repositories {
     mavenCentral()
@@ -44,6 +44,8 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '30.1-jre'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-text
     compile group: 'org.apache.commons', name: 'commons-text', version: '1.9'
+// https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
