--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-version '1.1.0'
+version '1.1.1'
 
 buildscript {
     ext.kotlin_version = '1.4.10'
@@ -58,4 +58,7 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
